<resources>


    <string name="app_name">Mercadea</string>


    //Menu bottom
    <string name="st_menu_inicio">Inicio</string>
    <string name="st_menu_chat">Chat</string>
    <string name="st_menu_producto">Producto</string>
    <string name="st_menu_cuenta">Cuenta</string>
    <string name="st_menu_vendedor">Vender</string>


    //Login y Register
    <string name="st_login">Login</string>
    <string name="st_register">Register</string>
    <string name="st_welcome">¡Bienvenido a mercadea, en este lugar encontraras muchas opciones de compras al por
    MAYOR!</string>
    <string name="st_welcome_register">¡Registrate en Mercadea y observa las mejores opciones del mercado!</string>
    <string name="st_welcome_forgotpassword"> ¿Olvidaste tu contraseña? Ingresa tu dirección de correo electrónico registrada y te enviaremos las instrucciones para recuperar la contraseña.</string>
    <string name="st_input_gmail">Ingresa tu Correo Electronico</string>
    <string name="st_input_password">Ingresa tu Contraseña</string>
    <string name="st_enter_gmail">Gmail</string>
    <string name="st_enter_password">Password</string>
    <string name="st_repeat_password">Repite la contraseña</string>
    <string name="st_forget_password">¿Olvidaste tu contraseña?</string>
    <string name="st_no_account">¿No tienes cuenta? ¡Registrate!</string>
    <string name="st_create_account">Crear Cuenta</string>
    <string name="st_login_account">Iniciar Sesion</string>
    <string name="st_forget_account">Recuperar Cuenta</string>


    //Account
    <string name="label_name">Nombre</string>
    <string name="value_full_name">Nombre completo</string>
    <string name="label_email">Correo electrónico</string>
    <string name="value_example_email">example@example.com</string>
    <string name="label_phone">Número de teléfono</string>
    <string name="value_example_phone">012345678</string>
    <string name="label_settings">Configuración</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_delete_account">Eliminar cuenta</string>

    //Chats
    <string name="action_search_account">Buscar Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name_category_textil">Textil</string>
    <string name="description_category_textil">Telas, algodones y prendas al por mayor. Todo lo que necesitas para tu negocio textil.</string>
    <string name="busca_cualquier_producto">Busca cualquier producto</string>
    <string name="anuncios_del_dia">ANUNCIOS DEL DIA</string>


</resources>